--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,86 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+body {
+  background-color: #000000;
+  background-image: url(/Users/jerrycox/Documents/dev/warcraft-quiz/public/wowBackground.jpg);
+  background-size: cover;
+  color: #ffffff;
+  display: flex;
+  margin: 0;
+  justify-content: center;
+  align-items: center;
   min-height: 100vh;
+}
+
+.app {
+  background-color: #252d4a;
+  background-image: url(/Users/jerrycox/Documents/dev/warcraft-quiz/public/questionBackground.jpg);
+  width: 450px;
+  min-height: 200px;
+  height: min-content;
+  border-radius: 15px;
+  padding: 20px;
+  box-shadow: 10px 10px 42px 0px rgba(0, 0, 0, 0.75);
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.score-section {
+  display: flex;
+  font-size: 24px;
+  align-items: center;
+}
+
+.question-section {
+  width: 100%;
+  position: relative;
+}
+
+.question-count {
+  margin-bottom: 20px;
+}
+
+.question-count span {
+  font-size: 28px;
+}
+
+.question-text {
+  margin-bottom: 12px;
+}
+
+.answer-section {
+  width: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+}
+
+button {
+  color: #ffffff;
+  width: 100%;
+  font-size: 16px;
+  border-radius: 15px;
+  display: flex;
+  padding: 5px;
+  justify-content: flex-start;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  border: 5px solid #07427d;
+  cursor: pointer;
+  background: linear-gradient(
+    #4e0000,
+    #500,
+    #700000,
+    #8d0000,
+    #860000
+  )
 }
 
-.App-link {
-  color: #61dafb;
+button:hover {
+  background: #b7b8bf5b;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button:focus {
+  outline: none;
+}
+
+button svg {
+  margin-right: 5px;
 }
